--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^1.5.2",
-    "await": "^0.2.5",
-    "bluebird": "^3.1.1",
     "classnames": "^2.2.1",
-    "flux": "^2.1.1",
     "keymirror": "^0.1.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.6",
-    "thenjs": "^2.0.2"
+    "react-dom": "^0.14.6"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
